# esp32-rf-module

./: .gitignore  CMakeLists.example.txt  CMakeLists.txt  Kconfig  Kconfig.projbuild.example  README.md  README_PUBLISH.md  idf_component.yml  publish.sh  rcswitch.cc  rcswitch.h  rf_mcp_tools.h  rf_module.h  tcswitch.cc
docs/: cc1101-branch.md  小智模拟信号复制发送-0.1.12.out
include/: cc1101.h  cc1101_defs.h  rf_mcp_tools.h  rf_module.h  rf_module_config.h
include/esp32_rf_module/: tcswitch.h
include/esp32_rf_module/mcp/: rf_mcp_tools.h
src/: cc1101.cc  rcswitch.cc  rf_module.cc  tcswitch.cc
